--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,11 +1,14 @@
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500" rel="stylesheet" />
-<link href="https://fonts.cdnfonts.com/css/sofia-pro" rel="stylesheet" />
 <link
   href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
   rel="stylesheet"
 />
 <link href="//fonts.googleapis.com/css2?family=Noto+Kufi+Arabic:wght@300;400;500;700&display=swap" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700" rel="stylesheet" />
+<link href="https://fonts.cdnfonts.com/css/sofia-pro" rel="stylesheet" />
 <script src="https://use.fontawesome.com/660238b999.js"></script>
 <style>
   body {
