--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -1,7 +1,7 @@
 <link href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500&display=swap" rel="stylesheet" />
 <meta property="og:description" content="Vibe design system by monday.com" />
 <meta property="og:title" content="Vibe Design System" />
-<meta property="og:image" content="https://i.ibb.co/kxw3NS1/Socialbanner-1.jpg" />
+<meta property="og:image" content="https://irp.cdn-website.com/33477119/dms3rep/multi/og-banner.jpeg" />
 <title>Vibe Design System</title>
 <script src="https://use.fontawesome.com/660238b999.js"></script>
 <style>
