Replace tokens in preview-head.html

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -28,63 +28,63 @@
     max-width: 50%;
   }
   .light-app-theme {
-    background-color: var(--primary-background-color);
+    background-color: var(--sb-primary-background-color);
   }
   .dark-app-theme {
-    background-color: var(--primary-background-color);
+    background-color: var(--sb-primary-background-color);
   }
   .black-app-theme {
-    background-color: var(--primary-background-color);
+    background-color: var(--sb-primary-background-color);
   }
   .hacker_theme-app-theme {
-    background-color: var(--primary-background-color);
+    background-color: var(--sb-primary-background-color);
   }
   .sbdocs.sbdocs-wrapper,
   .sbdocs.sbdocs-content {
-    background: var(--primary-background-color);
+    background: var(--sb-primary-background-color);
   }
   .sbdocs.sbdocs-p {
-    color: var(--primary-text-color);
+    color: var(--sb-primary-text-color);
   }
 
   .sbdocs .docs-story {
-    border: var(--layout-border-color);
+    border: var(--sb-layout-border-color);
   }
   .sbdocs .docs-story > div {
-    background: var(--secondary-background-color);
+    background: var(--sb-secondary-background-color);
   }
 
   .sbdocs {
-    color: var(--primary-text-color);
+    color: var(--sb-primary-text-color);
   }
 
   .sbdocs ul li a {
-    color: var(--link-color);
+    color: var(--sb-link-color);
   }
 
   #docs-root .docblock-argstable {
-    border: 1px solid var(--layout-border-color);
+    border: 1px solid var(--sb-layout-border-color);
   }
 
   #docs-root .docblock-argstable tr th {
-    color: var(--primary-text-color);
+    color: var(--sb-primary-text-color);
   }
 
   #docs-root .docblock-argstable tr td {
-    color: var(--primary-text-color);
-    background: var(--secondary-background-color);
+    color: var(--sb-primary-text-color);
+    background: var(--sb-secondary-background-color);
   }
   #docs-root .docblock-code-toggle {
     cursor: pointer;
-    background-color: var(--secondary-background-color);
-    border: 1px solid var(--layout-border-color);
-    color: var(--primary-text-color);
+    background-color: var(--sb-secondary-background-color);
+    border: 1px solid var(--sb-layout-border-color);
+    color: var(--sb-primary-text-color);
   }
   #docs-root .docblock-code-toggle.docblock-code-toggle--expanded {
-    background-color: var(--primary-selected-color);
+    background-color: var(--sb-primary-selected-color);
   }
   #docs-root .docblock-code-toggle:hover {
-    background-color: var(--primary-background-hover-color);
+    background-color: var(--sb-primary-background-hover-color);
   }
 
   .os-content button:hover {
